--- a/detalle.html
+++ b/detalle.html
@@ -25,7 +25,11 @@
                 </nav>
             </aside>
   
-            <div id="detalle-container"></div>
+            <div class="df columna w80 principal">
+                <section class="df centerX centerY pt2 columna blanco">
+                    <div id="detalle-container"></div>
+                </section>
+            </div>
     </main>
     <footer></footer>
 
