--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
                 <section id="peliculas" class="df centerX centerY pt2 columna blanco">
                     <div class="w90 pb1">
                         <h1 class="dm-sansBold">Películas</h1>
+
+                        <div id="loading" class="w100 df columna centerY pt2">
+                            <img src="assets/imgs/Rollo.png" alt="" width="60">
+                            <p class="dm-sans">Cargando...</p>
+                        </div>
                     </div>
                     <div id="movies-container"></div>
                 </section>
