--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
                             <img src="assets/imgs/Rollo.png" alt="" width="60">
                             <p class="dm-sans">Cargando...</p>
                         </div>
+                        
+                        <div id="error"></div>
                     </div>
                     <div id="movies-container"></div>
                 </section>
@@ -52,6 +54,11 @@
                 <section id="series" class="df centerX centerY pt2 columna blanco">
                     <div class="w90 pb1">
                         <h1 class="dm-sansBold">Series</h1>
+
+                        <div id="loadingS" class="w100 df columna centerY pt2">
+                            <img src="assets/imgs/Rollo.png" alt="" width="60">
+                            <p class="dm-sans">Cargando...</p>
+                        </div>
                     </div>
                     <div id="series-container"></div>
                 </section>
