--- a/detalle.html
+++ b/detalle.html
@@ -28,7 +28,16 @@
             <div class="df columna w80 principal">
                 <section class="df centerX centerY pt2 columna blanco">
                     <div id="detalle-container"></div>
+                    
+
+                    <div class="df divVoto w90">
+                        <button id="votar" class="botonVoto dm-sansBold">Agregar voto</button>
+                    </div>
+
+                    <dialog id="miModal"></dialog>
                 </section>
+
+                
             </div>
     </main>
     <footer></footer>
