--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
                             <img src="assets/imgs/Rollo.png" alt="" width="60">
                             <p class="dm-sans">Cargando...</p>
                         </div>
+
+                        <div id="error1"></div>
                     </div>
                     <div id="series-container"></div>
                 </section>
