--- a/detalle.html
+++ b/detalle.html
@@ -36,7 +36,7 @@
                     <div id="error"></div>
 
                     <div class="df divVoto w90">
-                        <button id="votar" class="botonVoto dm-sansBold">Agregar voto</button>
+                        <button id="votar" class="botonVoto dm-sansBold w100m">Agregar voto</button>
                     </div>
 
                     <dialog id="miModal"></dialog>
