--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                     </ul>
                 </nav>
             </aside>
-            <div class="df columna w80 principal w100t bordeRojot bordeRojom">
-                <section id="inicio" class="df centerX centerY pt2 posRel pb1 w90t">
+            <div class="df columna w80 principal w100t bordeRojot bordeRojom w100m">
+                <section id="inicio" class="df centerX centerY pt2 posRel pb1 w100t bordeRojot w100m">
                     <div class="banner w90 vh60">
                         <div class="degrade"></div>
                         <img src="assets/imgs/estrenos.jpeg" alt="" class="w100 fotoBanner">
@@ -38,7 +38,7 @@
                     </div>
                 </section>
 
-                <section id="peliculas" class="df centerX centerY pt2 columna blanco w90t">
+                <section id="peliculas" class="df centerX centerY pt2 columna blanco w100t w100m bordeRojom">
                     <div class="w90 pb1">
                         <h1 class="dm-sansBold">Películas</h1>
 
@@ -52,7 +52,7 @@
                     <div id="movies-container"></div>
                 </section>
 
-                <section id="series" class="df centerX centerY pt2 columna blanco w90t">
+                <section id="series" class="df centerX centerY pt2 columna blanco w100t w100m">
                     <div class="w90 pb1">
                         <h1 class="dm-sansBold">Series</h1>
 
