--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <header></header>
     <main>
         <div class="df">
+            
             <aside class="w20 vh100 fixed">
                 <h1 class="blanco dm-sansBold">CineApp</h1>
                 <nav>
@@ -25,8 +26,8 @@
                     </ul>
                 </nav>
             </aside>
-            <div class="df columna w80 principal w100t bordeRojot bordeRojom w100m">
-                <section id="inicio" class="df centerX centerY pt2 posRel pb1 w100t bordeRojot w100m">
+            <div class="df columna w80 principal w100t w100m">
+                <section id="inicio" class="df centerX centerY pt2 posRel pb1 w100t w100m">
                     <div class="banner w90 vh60">
                         <div class="degrade"></div>
                         <img src="assets/imgs/estrenos.jpeg" alt="" class="w100 fotoBanner">
@@ -38,7 +39,7 @@
                     </div>
                 </section>
 
-                <section id="peliculas" class="df centerX centerY pt2 columna blanco w100t w100m bordeRojom">
+                <section id="peliculas" class="df centerX centerY pt2 columna blanco w100t w100m">
                     <div class="w90 pb1">
                         <h1 class="dm-sansBold">Películas</h1>
 
@@ -68,7 +69,15 @@
             </div>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <nav class="none navAbajo df centerX centerY">
+            <ul class="df ulNavAbajo centerX spaceb">
+                <li><a href="#inicio" class="blanco dm-sans"><i class='bx bx-home pr0-5 blanco'></i>Inicio</a></li>
+                <li><a href="#peliculas" class="blanco dm-sans"><i class='bx  bx-film pr0-5 blanco'></i> Películas</a></li>
+                <li><a href="#series" class="blanco dm-sans"><i class='bx  bx-movie-play pr0-5 blanco'></i> Series</a></li>
+            </ul>
+        </nav>
+    </footer>
 
     <script src="assets/js/script.js"></script>
 </body>
