--- a/detalle.html
+++ b/detalle.html
@@ -45,7 +45,15 @@
                 
             </div>
     </main>
-    <footer></footer>
+    <footer>
+        <nav class="none navAbajo df centerX centerY">
+            <ul class="df ulNavAbajo centerX spaceb">
+                <li><a href="index.html#inicio" class="blanco"><i class='bx bx-home pr0-5 blanco'></i>Inicio</a></li>
+                <li><a href="index.html#peliculas" class="blanco"><i class='bx  bx-film pr0-5 blanco'></i> Películas</a></li>
+                <li><a href="index.html#series" class="blanco"><i class='bx  bx-movie-play pr0-5 blanco'></i> Series</a></li>
+            </ul>
+        </nav>
+    </footer>
 
     <script src="assets/js/detalle.js"></script>
 </body>
