--- a/detalle.html
+++ b/detalle.html
@@ -26,11 +26,11 @@
                 </nav>
             </aside>
   
-            <div class="df columna w80 principal">
+            <div class="df columna w80 principal contenido">
                 <section class="df centerX centerY pt2 columna blanco">
                     <div id="detalle-container"></div>
                     <div id="loading" class="w100 df columna centerY pt2">
-                            <img src="assets/imgs/Rollo.png" alt="" width="60">
+                            <img src="assets/imgs/Rollo.png" alt="" width="60" class="rollo">
                             <p class="dm-sans">Cargando...</p>
                     </div>
                     <div id="error"></div>
@@ -41,9 +41,14 @@
 
                     <dialog id="miModal"></dialog>
                 </section>
-
-                
             </div>
+        </div>
+        <div class="w100 df fEnd">
+            <div id="pochoclo" class="w80 pochoclo-container">
+                <img src="assets/imgs/pochoclos.webp" alt="pochoclos" class="w100 pochoclo-img">
+                <h2 id="texto" class="blanco dm-sansBold frase"></h2>
+            </div>
+        </div>
     </main>
     <footer>
         <nav class="none navAbajo df centerX centerY">
