--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             </aside>
             <div class="df columna w80 principal w100t w100m">
                 <section id="inicio" class="df centerX centerY pt2 posRel pb1 w100t w100m">
-                    <div class="banner w90 vh60">
+                    <div class="banner w90 vh60 hidden">
                         <div class="degrade"></div>
                         <img src="assets/imgs/estrenos.jpeg" alt="" class="w100 fotoBanner">
                         <div class="textoHome">
-                            <h2 class="blanco dm-sansBold h2Home">Nuevos estrenos</h2>
+                            <h2 id="texto" class="blanco dm-sansBold h2Home"></h2>
                             <h3 class="blanco dm-sans h3Home">Preparate para maratonear los lanzamientos más esperados</h3>
                         </div>
                         
@@ -44,7 +44,7 @@
                         <h1 class="dm-sansBold">Películas</h1>
 
                         <div id="loading" class="w100 df columna centerY pt2">
-                            <img src="assets/imgs/Rollo.png" alt="" width="60">
+                            <img src="assets/imgs/Rollo.png" alt="" width="60" class="rollo">
                             <p class="dm-sans">Cargando...</p>
                         </div>
                         
@@ -58,7 +58,7 @@
                         <h1 class="dm-sansBold">Series</h1>
 
                         <div id="loadingS" class="w100 df columna centerY pt2">
-                            <img src="assets/imgs/Rollo.png" alt="" width="60">
+                            <img src="assets/imgs/Rollo.png" alt="" width="60" class="rollo">
                             <p class="dm-sans">Cargando...</p>
                         </div>
 
