--- a/detalle.html
+++ b/detalle.html
@@ -43,7 +43,7 @@
                 </section>
             </div>
         </div>
-        <div class="w100 df fEnd">
+        <div class="w100 df fEnd displayNonet displayNonem">
             <div id="pochoclo" class="w80 pochoclo-container">
                 <img src="assets/imgs/pochoclos.webp" alt="pochoclos" class="w100 pochoclo-img">
                 <h2 id="texto" class="blanco dm-sansBold frase"></h2>
